--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,21 +1,25 @@
-version: '3'
+version: '3.8'
 
 services:
-  postgresql:
-    image: postgres
-    container_name: lesson
-    ports:
-      - '5432:5432'
-    environment:
-      - POSTGRES_HOST=localhost
-      - POSTGRES_USER=lesson
-      - POSTGRES_PASSWORD=lesson
-      - POSTGRES_DATABASE=lesson
-    command: postgres
-    restart: always
-
   redis:
     image: redis:alpine3.14
     container_name: redis-lesson
     ports:
       - '6379:6379'
+    restart: always
+
+  app:
+    build: .
+    container_name: nestjs-app
+    ports:
+      - '4000:4000'
+    environment:
+      - PORT=3000
+      - DB_PORT=5432
+      - DB_HOST=localhost # или IP-адрес вашего хоста PostgreSQL
+      - DB_USER=postgres
+      - DB_PASSWORD=4444
+      - DB_NAME=lesson
+    depends_on:
+      - redis
+    restart: always
